# KoboReadingStats

./: .gitignore  README.md  meson.build  org.butiu.koboreadingstats.json  org.gnome.Example.json
data/: meson.build  org.butiu.koboreadingstats.desktop.in  org.butiu.koboreadingstats.gschema.xml  org.butiu.koboreadingstats.metainfo.xml.in  org.butiu.koboreadingstats.service.in  org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  koboreadingstats.gresource.xml  main.vala  meson.build  sessions-page.blp  sessions-page.vala  style.css  window.blp  window.vala
